--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "webpack": "^2.2.0"
   },
   "dependencies": {
+    "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.17.2",
@@ -26,7 +27,11 @@
     "pg-promise": "^5.9.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-hot-loader": "^1.3.1",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "style-loader": "^0.18.2",
-    "webpack": "^2.6.1"
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.5.0"
   }
 }
